# Lingetic

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DesignNotes.md  README.md  config.public.dev.pkl  devbox.json  devenv.nix  gradle.properties  package.json  shell.nix  sonar-project.properties
.codacy/: codacy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.husky/: pre-commit
.sonarlint/: connectedMode.json
lingetic-nextjs-frontend/: .env.example  .gitignore  .npmrc  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml  posthog.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
lingetic-spring-backend/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  gradle.properties.example  settings.gradle.kts
prompts/: create_sentences.md  extract_table_of_content.md  lesson_creator.md  (+1 more)
scripts/: README.md  main.py  pyproject.toml  questions.json  schema.json
scripts/scripts/: __init__.py  book2sentences.py  combine_sentences.py  course.py  db_dump.py  deduplicate_sentences.py  enrich_sentences.py  explanation.py  explanations.py  fill_in_the_blanks.py  filter_sentences.py  images_to_sentence_jsons.py  insert_into_db.py  insert_questions_into_db.py  insert_questions_to_db.py  insert_sentences_into_db.py  japanese_to_romaji.py  local_s3_server.py  pdf_to_images.py  questions.py  select_questions.py  sentence_to_fill_in_the_blanks.py  sentences.py  sort.py  sort_sentences.py  tatoeba.py  tts.py  update_question_data.py  upload_to_r2.py
(+295 files in other folders)
