[project]
name = "scripts"
version = "0.1.0"
description = "A collection of scripts to create Lingetic language learning courses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "psycopg2-binary>=2.9.9",
    "uuid>=1.30",
]

[tool.ruff]
line-length = 80
