[project]
name = "scripts"
version = "0.1.0"
description = "A collection of scripts to create Lingetic language learning courses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "psycopg2-binary>=2.9.9",
    "uuid>=1.30",
    "tenacity>=9.0.0",
    "google-genai>=1.8.0",
    "aiofiles>=24.1.0",
    "pdf2image>=1.17.0",
    "gtts>=2.5.4",
    "boto3>=1.37.37",
    "pydub>=0.25.1",
    "google-api-core>=2.24.2",
]

[tool.ruff]
line-length = 80
